samples/_failures_safe/1761603259_ee3656_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a06f21f.c: In function ‘main’:
./samples/SAFE/__tmp_8a06f21f.c:143:16: error: missing terminating " character
  143 |         printf("3. Show recent entries\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8a06f21f.c:143:9: error: expected expression at end of input
  143 |         printf("3. Show recent entries\n
      |         ^~~~~~
./samples/SAFE/__tmp_8a06f21f.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a06f21f.c:143:9: error: expected declaration or statement at end of input
